# chicken-run

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  Player.cpp  Player.hpp  env.cpp  env.hpp  server.cpp
